b=90060 Checking in DBarons fix for the print crash when a document changes under it.  r=dcone sr=hyatt.